--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -3,7 +3,8 @@
     <div class="col-md-4">
       <h4><span data-ng-bind="idValue" id="id-value"></span>
         <small class="text-muted">
-          <span data-ng-bind="idType" id="id-type"></span>
+          <span data-ng-hide="idType === 'url'" data-ng-bind="idType" id="id-type"></span>
+          <a data-ng-href="{{idValue}}" data-ng-show="idType === 'url'" data-ng-bind="idType" id="id-type"></a>
         </small>
       </h4>
       <div data-ng-if="isUniqueType" class="panel panel-default">
@@ -86,9 +87,43 @@
         <tab data-ng-if="isUniqueType" data-ng-click="activeTab = 'received'">
           <tab-heading><span class="glyphicon glyphicon-download"></span> <span class="hidden-xs">Received </span>({{0+overview.receivedPositive+overview.receivedNeutral+overview.receivedNegative}})</tab-heading>
           <br>
-          <div class="alert alert-info text-center login-alert-info">
+          <div data-ng-hide="authentication.user" class="alert alert-info text-center login-alert-info">
             <strong><a href="#!/signin">Log in</a></strong> to write messages.
           </div>
+
+          <div class="panel panel-default panel-success">
+            <div class="panel-heading visible-xs">
+                <h3 class="panel-title"><a data-toggle="collapse" data-target="#write-feedback"><span class="glyphicon glyphicon-chevron-down"></span> Write feedback</a></h3>
+            </div>
+            <div class="panel-body collapse" id="write-feedback">
+              <form action="/id/write" method="post">
+                <input id="type" name="type" type="hidden" value="url">      <input id="value" name="value" type="hidden" value="https://www.facebook.com/mmalmi">      <input id="authenticity_token" name="authenticity_token" type="hidden" value="njR25Ffg4u9LX7JLrREa0AYNDD66NHEerkHOegRH8qc=">      <div class="form-group">
+                  <textarea name="comment" class="form-control" id="comment" placeholder="Write feedback"></textarea>
+                </div>
+
+                <div class="row">
+                  <div class="col-sm-10 col-xs-12 rating-slider">
+                    <slider data-ng-model="writeMsgSlider" min="-3" max="3" step="1" value="1">
+                    <input type="hidden" name="rating" id="buttonvalue" autocomplete="off" value="1">
+                    <span class="hidden-xs write-msg-icons has-success mar-left5">
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
+                    </span>
+                  </div>
+                  <div class="col-sm-2 col-xs-12" style="text-align:right">
+                    <span class="visible-xs pull-left write-msg-icons has-success">
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
+                    </span>
+                    <button type="submit" class="pull-right ladda-button btn btn-primary" data-style="zoom-out"><span class="ladda-label"><span class="fa fa-edit"></span> Publish</span><span class="ladda-spinner"></span></button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+
           <div data-ng-if="received.$resolved && received.length == 0" class="alert alert-info text-center animated fadeIn">No messages to show</div>
           <div infinite-scroll="getReceivedMsgs()" infinite-scroll-distance="2" infinite-scroll-disabled="!received.$resolved || received.finished || activeTab !== 'received'">
             <div data-ng-repeat="msg in received" data-ng-include="'modules/messages/views/message.partial.html'"></div>
