--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -91,7 +91,7 @@
             <strong><a href="#!/signin">Log in</a></strong> to write messages.
           </div>
 
-          <div class="panel panel-default panel-success">
+          <div data-ng-show="authentication.user" class="panel panel-default panel-success">
             <div class="panel-heading visible-xs">
                 <h3 class="panel-title"><a data-toggle="collapse" data-target="#write-feedback"><span class="glyphicon glyphicon-chevron-down"></span> Write feedback</a></h3>
             </div>
