--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -102,20 +102,20 @@
                 </div>
 
                 <div class="row">
-                  <div class="col-sm-10 col-xs-12 rating-slider">
+                  <div class="col-sm-10 col-xs-12 rating-slider" id="write-msg-slider">
                     <slider data-ng-model="writeMsgSlider" min="-3" max="3" step="1" value="1">
                     <input type="hidden" name="rating" id="buttonvalue" autocomplete="off" value="1">
-                    <span class="hidden-xs write-msg-icons has-success mar-left5">
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
+                    <span class="hidden-xs write-msg-icons mar-left5">
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
                     </span>
                   </div>
                   <div class="col-sm-2 col-xs-12" style="text-align:right">
                     <span class="visible-xs pull-left write-msg-icons has-success">
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5 form-control-feedback" style="display:none;"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
+                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
                     </span>
                     <button type="submit" class="pull-right ladda-button btn btn-primary" data-style="zoom-out"><span class="ladda-label"><span class="fa fa-edit"></span> Publish</span><span class="ladda-spinner"></span></button>
                   </div>
