Persistent filters, logged in viewpoint

--- a/public/modules/messages/views/filters.partial.html
+++ b/public/modules/messages/views/filters.partial.html
@@ -14,7 +14,7 @@
       <!-- <li ><a href="#" data-val="other"><span class="glyphicon glyphicon-question-sign"></span> Other</a></li> -->
     </ul>
     <div class="alert alert-info"><p>Viewing as 
-      <a href="#!/id/{{defaultViewpoint.viewpointType|escape}}/{{defaultViewpoint.viewpointValue|escape}}" data-id-type="keyID" data-id-value="1DqrzTcimQp3Ye88oHgxdU7DBTsM2TRYFj" class="id-link" data-ng-bind="defaultViewpoint.viewpointName"></a>
+      <a href="#!/id/{{viewpoint.viewpointType|escape}}/{{viewpoint.viewpointValue|escape}}" data-id-type="keyID" data-id-value="1DqrzTcimQp3Ye88oHgxdU7DBTsM2TRYFj" class="id-link" data-ng-bind="viewpoint.viewpointName"></a>
     </p>
     <p>Max distance from viewpoint:</p>
     <div class="btn-group trust-distance-selector">
