Profile link, urls without hash

--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <base href="/">
 	<title>{{title}}</title>
 
 	<!-- General META -->
