Remove tab animations

--- a/public/modules/messages/views/message.partial.html
+++ b/public/modules/messages/views/message.partial.html
@@ -1,4 +1,4 @@
-<div class="panel animated fadeIn message-panel" data-ng-class="msg.panelStyle">
+<div class="panel message-panel" data-ng-class="msg.panelStyle">
     <div class="panel-heading" style="{{msg.bgColor}}">
     <p class="">
         <span class="mar-left5 pull-right" data-ng-class="msg.iconStyle" data-ng-repeat="n in msg.iconCount track by $index"></span>
