--- a/public/modules/identifiers/views/list-identifiers.client.view.html
+++ b/public/modules/identifiers/views/list-identifiers.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="IdentifiersController" data-ng-init="search()">
   <div class="mar-top60-xs"></div>
-  <div data-ng-if="!queryTerm" class="jumbotron">
+  <div data-ng-if="!queryTerm && !authentication.user" class="jumbotron">
     <div class="align-center"><h1>Address book with ratings</h1></div>
 
     <div class="row">
