--- a/public/modules/users/views/authentication/signin.client.view.html
+++ b/public/modules/users/views/authentication/signin.client.view.html
@@ -9,14 +9,8 @@
 		<a href="/auth/google" class="undecorated-link">
 			<img src="/modules/users/img/buttons/google.png">
 		</a>
-		<a href="/auth/linkedin" class="undecorated-link">
-			<img src="/modules/users/img/buttons/linkedin.png">
-		</a>
-		<a href="/auth/github" class="undecorated-link">
-			<img src="/modules/users/img/buttons/github.png">
-		</a>
-		<a href="" data-ng-click="navigator.id.request()" class="undecorated-link">
-			<img src="/modules/users/img/buttons/github.png">
-		</a>
+		<!--<a href="" class="hidden-xs" data-ng-click="login()" class="undecorated-link">
+			<img src="/modules/users/img/buttons/email.png">
+		</a>-->
 	</div>
 </section>
