--- a/public/modules/identifiers/views/view-identifier.client.view.html
+++ b/public/modules/identifiers/views/view-identifier.client.view.html
@@ -100,18 +100,14 @@
 
                 <div class="row">
                   <div class="col-sm-10 col-xs-12 rating-slider" id="write-msg-slider">
-                    <slider data-ng-model="message.rating" min="-3" max="3" step="1">
+                    <slider data-ng-model="message.rating" tooltip="hide" min="-3" max="3" step="1"></slider>
                     <span class="hidden-xs write-msg-icons mar-left5">
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
+                      <span data-ng-repeat="i in iconCount(message.rating) track by $index" class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" data-ng-class="[iconStyle(message.rating), iconClass(message.rating)]"></span>
                     </span>
                   </div>
                   <div class="col-sm-2 col-xs-12" style="text-align:right">
-                    <span class="visible-xs pull-left write-msg-icons has-success">
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
-                      <span class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" style="display:none;"></span>
+                    <span class="visible-xs pull-left write-msg-icons">
+                      <span data-ng-repeat="i in iconCount(message.rating) track by $index" class="write-msg-icon glyphicon glyphicon-thumbs-up mar-left5" data-ng-class="[iconStyle(message.rating), iconClass(message.rating)]"></span>
                     </span>
                     <button type="submit" class="pull-right ladda-button btn btn-primary" data-style="zoom-out"><span class="ladda-label"><span class="fa fa-edit"></span> Publish</span><span class="ladda-spinner"></span></button>
                   </div>
