--- a/public/modules/identifiers/views/create-identifier.client.view.html
+++ b/public/modules/identifiers/views/create-identifier.client.view.html
@@ -1,18 +1,19 @@
 <section data-ng-controller="IdentifiersController">
-    <div class="page-header">
-        <h1>New Identifier</h1>
-    </div>
-    <div class="col-md-12">
-        <form class="form-horizontal" data-ng-submit="create()" novalidate>
+    <div class="col-md-6">
+        <form class="form-horizontal" data-ng-submit="goToID(newIdentifier.type, newIdentifier.value)" novalidate>
             <fieldset>
                 <div class="form-group">
-                    <label class="control-label" for="name">Name</label>
+                    <label class="control-label" for="value">Value</label>
                     <div class="controls">
-                        <input type="text" data-ng-model="name" id="name" class="form-control" placeholder="Name" required>
+                        <input type="text" autofocus data-ng-model="newIdentifier.value" data-ng-model="value" id="value" class="form-control" placeholder="Value" required>
+                    </div>
+                    <label class="control-label" for="type">Type</label>
+                    <div class="controls">
+                        <input type="text" data-ng-model="newIdentifier.type" id="type" class="form-control" placeholder="Type" required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btn btn-default">
+                    <input type="submit" value="Go" class="btn btn-default">
                 </div>
 				<div data-ng-show="error" class="text-danger">
 					<strong data-ng-bind="error"></strong>
