Page title, search

--- a/app/views/layout.server.view.html
+++ b/app/views/layout.server.view.html
@@ -3,7 +3,7 @@
 
 <head>
   <base href="/">
-	<title>{{title}}</title>
+	<title data-ng-bind="'{{title}} ' + pageTitle">{{title}}</title>
 
 	<!-- General META -->
 	<meta charset="utf-8">
