--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -1,3 +1,4 @@
+/*csslint ids:false */
 /* ==== Google font ==== */
 @import url("http://fonts.googleapis.com/css?family=Lato:400,300,700,900");
 body {
